<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/krajeactivity4"
    tools:context=".KrajeActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="360dp"
        android:layout_height="639dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ImId"
            android:layout_width="141dp"
            android:layout_height="136dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="174dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="329dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376" />

        <EditText
            android:id="@+id/input_capital"
            android:layout_width="245dp"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="401dp"
            android:layout_marginEnd="59dp"
            android:layout_marginBottom="164dp"
            android:ems="10"
            android:inputType="text"
            android:shadowColor="#082875"
            android:hint="@string/stolica"
            android:textColor="#34404D"
            android:textColorHighlight="#082875"
            android:textColorHint="#6B7FB1"
            android:textColorLink="#082875"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.707" />

        <EditText
            android:id="@+id/input_country"
            android:layout_width="245dp"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="57dp"
            android:layout_marginTop="329dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="236dp"
            android:ems="10"
            android:inputType="text"
            android:shadowColor="#062672"
            android:hint="@string/kraj"
            android:textColor="#34404D"
            android:textColorHighlight="#0B3582"
            android:textColorHint="#6D86B1"
            android:textColorLink="#0A3582"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.584" />

        <Button
            android:id="@+id/button"
            android:layout_width="43dp"
            android:layout_height="36dp"
            android:layout_below="@+id/input_capital"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="259dp"
            android:layout_marginTop="489dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="114dp"
            android:background="@drawable/ic_baseline_fact_check_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.901" />

        <ImageView
            android:id="@+id/FlId"
            android:layout_width="237dp"
            android:layout_height="164dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="305dp"
            android:visibility="invisible"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/hint"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="57dp"
            android:layout_marginTop="479dp"
            android:layout_marginEnd="172dp"
            android:layout_marginBottom="111dp"
            android:background="#34404D"
            android:backgroundTint="#34404D"
            android:text="@string/podpowied" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="286dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="591dp"
            android:backgroundTint="#14FFFFFF"
            android:text="@string/menu" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
